--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "tfx-cli": "^0.9.2",
         "ts-loader": "^9.2.1",
         "typescript": "^4.2.4",
+        "underscore": ">=1.12.1",
         "webpack": "^5.37.1",
         "webpack-cli": "^4.7.0"
     }
