--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "replace-in-file-webpack-plugin": "^1.0.6",
         "terser-webpack-plugin": "^5.1.3",
         "tfx-cli": "^0.9.2",
+        "trim-newlines": ">=3.0.1",
         "ts-loader": "^9.2.3",
         "typescript": "^4.3.4",
         "underscore": ">=1.12.1",
